--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D127a" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14E11f" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--Options-->
@@ -230,7 +231,7 @@
         <scene sceneID="EKN-ka-Srl">
             <objects>
                 <tableViewController id="dd2-at-RAg" customClass="DailyTab" customModule="prayerbook" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tr5-jo-aHH">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tr5-jo-aHH">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -241,7 +242,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" placeholderIntrinsicWidth="748" placeholderIntrinsicHeight="33" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="GJZ-ki-hwh" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
-                                            <rect key="frame" x="10" y="5" width="748" height="33"/>
+                                            <rect key="frame" x="10" y="0.0" width="748" height="39"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -251,35 +252,35 @@
                                         <constraint firstItem="GJZ-ki-hwh" firstAttribute="leading" secondItem="wPF-qS-ZcU" secondAttribute="leading" priority="999" constant="10" id="0fE-No-nBW"/>
                                         <constraint firstAttribute="bottom" secondItem="GJZ-ki-hwh" secondAttribute="bottom" priority="999" constant="5" id="mhZ-lm-sRi"/>
                                         <constraint firstAttribute="trailing" secondItem="GJZ-ki-hwh" secondAttribute="trailing" priority="999" constant="10" id="n4i-qr-cgq"/>
-                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="top" secondItem="wPF-qS-ZcU" secondAttribute="top" priority="999" constant="5" id="uIb-2I-3Mc"/>
+                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="top" secondItem="wPF-qS-ZcU" secondAttribute="top" priority="999" id="uIb-2I-3Mc"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="title" destination="GJZ-ki-hwh" id="o1b-x3-umm"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="44" id="I8y-c9-SkQ" customClass="ImageCell" customModule="prayerbook" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="35" id="I8y-c9-SkQ" customClass="ImageCell" customModule="prayerbook" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I8y-c9-SkQ" id="mwe-w3-Yzf">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" placeholderIntrinsicWidth="702" placeholderIntrinsicHeight="21" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="702" translatesAutoresizingMaskIntoConstraints="NO" id="2ra-KW-o5s" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
-                                            <rect key="frame" x="56" y="11" width="702" height="21"/>
+                                            <rect key="frame" x="45" y="7" width="713" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lDm-jS-VQP">
-                                            <rect key="frame" x="10" y="5" width="36" height="36"/>
+                                            <rect key="frame" x="10" y="0.0" width="25" height="25"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="36" id="FtU-nR-69d"/>
-                                                <constraint firstAttribute="width" constant="36" id="nwe-ms-0e7"/>
+                                                <constraint firstAttribute="height" constant="25" id="FtU-nR-69d"/>
+                                                <constraint firstAttribute="width" constant="25" id="nwe-ms-0e7"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="2ra-KW-o5s" secondAttribute="trailing" priority="999" constant="10" id="01Q-cu-oMV"/>
-                                        <constraint firstItem="lDm-jS-VQP" firstAttribute="top" secondItem="mwe-w3-Yzf" secondAttribute="top" priority="999" constant="5" id="2Xf-zP-oZS"/>
+                                        <constraint firstItem="lDm-jS-VQP" firstAttribute="top" secondItem="mwe-w3-Yzf" secondAttribute="top" priority="999" id="2Xf-zP-oZS"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2ra-KW-o5s" secondAttribute="bottom" priority="999" constant="5" id="9XL-Nt-8HB"/>
                                         <constraint firstItem="2ra-KW-o5s" firstAttribute="leading" secondItem="lDm-jS-VQP" secondAttribute="trailing" priority="999" constant="10" id="Pcs-tA-FX3"/>
                                         <constraint firstItem="lDm-jS-VQP" firstAttribute="leading" secondItem="mwe-w3-Yzf" secondAttribute="leading" priority="999" constant="10" id="d2Q-Te-z5F"/>
@@ -299,7 +300,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Subtitle" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="HR8-Py-FPC" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
-                                            <rect key="frame" x="10" y="29" width="748" height="20"/>
+                                            <rect key="frame" x="10" y="29" width="748" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -463,7 +464,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EQN-rs-m7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="779" y="-2188"/>
+            <point key="canvasLocation" x="1203" y="-2188"/>
         </scene>
         <!--Holy Communion-->
         <scene sceneID="fE8-SV-o0n">
@@ -726,7 +727,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Uu6-Xr-r03"/>
         <segue reference="xjH-sG-H2F"/>
+        <segue reference="Uu6-Xr-r03"/>
     </inferredMetricsTieBreakers>
 </document>
